kubernets practise/example-1/backendapis/backendapi.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: practice-backend
  namespace: practice
  labels:
    role: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      role: backend
  template:
    metadata:
      labels:
        role: backend
    spec:
      containers:
        - name: backend-container
          image: hashicorp/http-echo
          args:
            - "-text= Hellow from backend"
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata: 
  name: practice-service-backend
spec:
  selector:
    role: backend
  ports:
    - port: 80
      targetPort: 5678
  type: ClusterIP
